patch from Mike Fowler to fix broken builds